--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".home">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/title"
+        android:layout_width="340dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:textSize="55dp"
+        android:textColor="#3debd4"
+        android:id="@+id/textView2" />
+
+    <Button
+        android:id="@+id/maps"
+        android:text="@string/maps"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_above="@+id/list"
+        android:textSize="30dp"
+        android:onClick="MapsActivity"/>
+
+    <Button
+        android:id="@+id/list"
+        android:text="@string/list"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_above="@+id/events"
+        android:textSize="30dp"
+        android:onClick="List"/>
+
+    <Button
+        android:id="@+id/events"
+        android:text="@string/events"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:textSize="30dp"
+        android:onClick="createAnEvent"/>
+
 </RelativeLayout>
