--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,7 @@
         android:gravity="center_horizontal"
         android:textSize="55dp"
         android:textColor="#3debd4"
-        android:id="@+id/textView2" />
+        android:id="@+id/titleName" />
 
     <Button
         android:id="@+id/maps"
