--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/cool_gradient"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".home">
 
     <TextView android:text="@string/title"
@@ -11,9 +12,9 @@
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        android:textSize="54dp"
-        android:textColor="#3debd4"
-        android:id="@+id/titleName" />
+        android:textSize="65dp"
+        android:id="@+id/titleName"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/maps"
@@ -22,7 +23,7 @@
         android:layout_height="80dp"
         android:layout_above="@+id/list"
         android:textSize="30dp"
-        android:onClick="MapsActivity"/>
+        android:onClick="MapsActivity" />
 
     <Button
         android:id="@+id/list"
