--- a/app/src/main/res/layout/content_list.xml
+++ b/app/src/main/res/layout/content_list.xml
@@ -8,6 +8,6 @@
     android:layout_height="match_parent" tools:context="ek327.finalproject.List">
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin" android:text="@string/large_text" />
+        android:layout_margin="@dimen/text_margin" />
 
 </android.support.v4.widget.NestedScrollView>
