--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        android:textSize="65dp"
+        android:textSize="65sp"
         android:id="@+id/titleName"
         android:textStyle="bold" />
     <ImageView
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_above="@+id/list"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:onClick="MapsActivity" />
 
     <Button
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_above="@+id/events"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:onClick="List"/>
 
     <Button
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:onClick="createAnEvent"/>
 
 </RelativeLayout>
